<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/main"
        android:background="@drawable/background">

    <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:layout_marginStart="25dp"
            android:text="@string/impariamo_assieme"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textColor="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/entra_nella_community"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:layout_constraintStart_toStartOf="@id/heading" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_layout"
            android:elevation="15dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/white_bg"
            app:layout_constraintTop_toTopOf="@id/line_half"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accedi_title"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/black"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/errorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/err_interno"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                android:textColor="@color/design_default_color_error"
                android:layout_marginTop="5dp"
                android:layout_marginStart="25dp"
                app:layout_constraintTop_toBottomOf="@+id/loginText"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="invisible"
        />

        <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                app:layout_constraintTop_toBottomOf="@+id/loginText"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textColorHint="@color/text_gray"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
        />

        <EditText
                android:id="@+id/passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwd_hint"
                app:layout_constraintTop_toBottomOf="@+id/email"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textColorHint="@color/text_gray"
                android:inputType="textPassword"
                android:textColor="@color/black"
        />

        <Button
                android:id="@+id/accedibtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accedi"
                app:layout_constraintTop_toBottomOf="@+id/passwd"
                android:backgroundTint="@color/login"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textColor="@color/black"
        />
        <TextView
                android:id="@+id/noaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_hai_un_account"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:textColor="@color/black"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                app:layout_constraintTop_toBottomOf="@id/accedibtn"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/passdimenticata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_dimenticata"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="25dp"
                app:layout_constraintTop_toBottomOf="@id/noaccount"
                app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
